--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   </head>
   <body>
     <main>
+      <div class="logo-sm">
+        <img class="xel-logo" src="./images/xel_dot_logo_v1.svg" />
+      </div>
       <div class="container">
-        <div class="cover-img"></div>
+        <div class="cover-img">
+          <img src="/images/hero_image_840x840.png" alt="logo" />
+        </div>
         <div class="titles">
           <h3 class="hero-title">Under Construction</h3>
           <h5 class="hero-desc">We will be here soon</h5>
