--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
   <body>
     <main>
       <div class="logo-sm">
-        <img class="xel-logo" src="./images/xel_dot_logo_v1.svg" />
+        <img
+          class="xel-logo"
+          src="./images/xel_dot_logo_v1.svg"
+          alt="xel-logo-sm"
+        />
       </div>
       <div class="container">
         <div class="cover-img">
-          <img src="/images/hero_image_840x840.png" alt="logo" />
+          <img src="/images/hero_image_840x840.png" alt="cover-logo" />
         </div>
         <div class="titles">
           <h3 class="hero-title">Under Construction</h3>
