--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon_blurple.png" />
     <title>xeldot</title>
   </head>
   <body>
@@ -15,6 +16,7 @@
           alt="xel-logo-sm"
         />
       </div>
+      <div class="devider"></div>
       <div class="container">
         <div class="cover-img">
           <img src="/images/hero_image_840x840.png" alt="cover-logo" />
