--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon_blurple.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/images/Favicons/white_16x16.png"
+      media="(prefers-color-scheme: dark)"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/images/Favicons/black_16x16.png"
+      media="(prefers-color-scheme: light)"
+    />
     <title>xeldot</title>
   </head>
   <body>
