--- a/index.html
+++ b/index.html
@@ -19,24 +19,44 @@
     <title>xeldot</title>
   </head>
   <body>
+    <header class="main-header">
+      <img src="images/xel_dot_logo_v1.svg" alt="Xeldot logo" class="logo" />
+      <nav class="main-nav">
+        <ul class="main-nav-links">
+          <li><a href="#" class="main-nav-link">Home</a></li>
+          <li><a href="#" class="main-nav-link">Portfolio</a></li>
+          <li><a href="#" class="main-nav-link">About Us</a></li>
+          <li><a href="#" class="main-nav-link">Reach Out</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-      <div class="logo-sm">
-        <img
-          class="xel-logo"
-          src="./images/xel_dot_logo_v1.svg"
-          alt="xel-logo-sm"
-        />
-      </div>
-      <div class="devider"></div>
-      <div class="container">
-        <div class="cover-img">
-          <img src="/images/hero_image_840x840.png" alt="cover-logo" />
+      <section class="main-section">
+        <div class="hero">
+          <div class="hero-text-box">
+            <h1>HEADLINE 1</h1>
+            <h2>HEADLINE 2</h2>
+            <h3>HEADLINE 3</h3>
+            <p>
+              Body text copy, some example for example. Body text copy, some
+              example for example. Body text copy, some example for example.
+              Body text copy, some example for example. Body text copy, some
+              example for example. Body text copy, some example for example.
+              Body text copy, some example for example. Body text copy, some
+              example for example. Body text copy, some example for example.
+              Body text copy, some example for example. Body text copy, some
+              example for example. Body text copy, some example for example.
+              Body text copy, some example for example. Body text copy, some
+              example for example. Body text copy, some example for example.
+              Body text copy, some example for example. Body text copy, some
+              example for example. Body text copy, some example for example.
+            </p>
+          </div>
+          <div class="hero-img-box">
+            <img src="./images/hero_image_840x840.png" />
+          </div>
         </div>
-        <div class="titles">
-          <h3 class="hero-title">Under Construction</h3>
-          <h5 class="hero-desc">We will be here soon</h5>
-        </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
