--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <img src="images/xel_dot_logo_v1.svg" alt="Xeldot logo" class="logo" />
       <nav class="main-nav">
         <ul class="main-nav-links">
-          <li><a href="#" class="main-nav-link">Home</a></li>
-          <li><a href="#" class="main-nav-link">Portfolio</a></li>
-          <li><a href="#" class="main-nav-link">About Us</a></li>
-          <li><a href="#" class="main-nav-link">Reach Out</a></li>
+          <li><a href="#" class="main-nav-link btn">Home</a></li>
+          <li><a href="#" class="main-nav-link btn">Portfolio</a></li>
+          <li><a href="#" class="main-nav-link btn">About Us</a></li>
+          <li><a href="#" class="main-nav-link cta-btn">Reach Out</a></li>
         </ul>
       </nav>
     </header>
@@ -37,7 +37,7 @@
             <h1>HEADLINE 1</h1>
             <h2>HEADLINE 2</h2>
             <h3>HEADLINE 3</h3>
-            <p>
+            <p class="hero-description">
               Body text copy, some example for example. Body text copy, some
               example for example. Body text copy, some example for example.
               Body text copy, some example for example. Body text copy, some
@@ -53,9 +53,15 @@
             </p>
           </div>
           <div class="hero-img-box">
-            <img src="./images/hero_image_840x840.png" />
+            <img src="./images/hero_image_840x840.png" class="hero-img" />
           </div>
         </div>
+        <section class="boxes">
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+        </section>
       </section>
     </main>
   </body>
