--- a/index.html
+++ b/index.html
@@ -62,6 +62,50 @@
           <div class="box"></div>
           <div class="box"></div>
         </section>
+        <section class="features">
+          <div class="features-img">
+            <div class="imgs-features">
+              <img src="/images/pc-img-xd.jpg" class="pc-img" />
+            </div>
+          </div>
+          <div class="features-text-boxes">
+            <div class="hero-text-box">
+              <h1>HEADLINE 1</h1>
+              <h2>HEADLINE 2</h2>
+              <h3>HEADLINE 3</h3>
+              <p class="hero-description mg-btm-sm">
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+              </p>
+              <h2>HEADLINE 2</h2>
+              <h3>HEADLINE 3</h3>
+              <p class="hero-description">
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+                Body text copy, some example for example. Body text copy, some
+                example for example. Body text copy, some example for example.
+              </p>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
   </body>
